// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SelectInput /> > should have some hintText 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_position_relative_mobile__onxwju8v sprinkles_width_full_mobile__onxwjuff NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf sprinkles_position_relative_mobile__onxwju8v"
        >
          <select
            autocomplete="off"
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_select__4z7xt312 reset_trimmedElement__4z7xt30 reset_select__4z7xt39 sprinkles_flexGrow_1_mobile__onxwjun7 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_resetVariants__4z7xt3c reset_resetVariants_as_input__4z7xt313 reset_trimmedElement__4z7xt30 reset_input__4z7xt38 sprinkles_width_full_mobile__onxwjuff sprinkles_position_relative_mobile__onxwju8v sprinkles_display_flex_mobile__onxwju77 sprinkles_borderRadius_md_mobile__onxwjua3 sprinkles_backgroundColor_transparent__onxwju4r withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_height_full_mobile__onxwjudv sprinkles_marginRight_4_mobile__onxwjuwr sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_position_absolute_mobile__onxwju8z SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju77 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv sprinkles_textAlign_left_mobile__onxwju9b NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_2_mobile__onxwjuqv sprinkles_paddingRight_2_mobile__onxwjurz sprinkles_display_none_mobile__onxwju6v NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_label__4z7xt3m  sprinkles_pointerEvents_none__onxwju2u sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_marginBottom_none_mobile__onxwjuv3 sprinkles_marginLeft_none_mobile__onxwjuw7 sprinkles_marginRight_none_mobile__onxwjuxf sprinkles_marginTop_none_mobile__onxwjuyn sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_inline_mobile__onxwju7f NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
    <p
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_p__4z7xt3e reset_trimmedElement__4z7xt30 reset_resetVariants__4z7xt3c reset_resetVariants_as_p__4z7xt3e reset_trimmedElement__4z7xt30 sprinkles_fontSize_2__onxwju1z sprinkles_lineHeight_2__onxwju28 sprinkles_fontWeight_normal__onxwju2g sprinkles_color_unset__onxwju6u typography_typographyStyles__yhjp330 reset_resetVariants__4z7xt3c reset_resetVariants_as_p__4z7xt3e reset_trimmedElement__4z7xt30 sprinkles_marginTop_1_mobile__onxwjuxn HintText_hintText__down5s0 InputState_natural_default_colour__a2a1mv4"
    >
      hint text
    </p>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_position_relative_mobile__onxwju8v sprinkles_width_full_mobile__onxwjuff NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf sprinkles_position_relative_mobile__onxwju8v"
        >
          <select
            autocomplete="off"
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_select__4z7xt312 reset_trimmedElement__4z7xt30 reset_select__4z7xt39 sprinkles_flexGrow_1_mobile__onxwjun7 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_resetVariants__4z7xt3c reset_resetVariants_as_input__4z7xt313 reset_trimmedElement__4z7xt30 reset_input__4z7xt38 sprinkles_width_full_mobile__onxwjuff sprinkles_position_relative_mobile__onxwju8v sprinkles_display_flex_mobile__onxwju77 sprinkles_borderRadius_md_mobile__onxwjua3 sprinkles_backgroundColor_transparent__onxwju4r withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_height_full_mobile__onxwjudv sprinkles_marginRight_4_mobile__onxwjuwr sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_position_absolute_mobile__onxwju8z SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju77 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv sprinkles_textAlign_left_mobile__onxwju9b NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_2_mobile__onxwjuqv sprinkles_paddingRight_2_mobile__onxwjurz sprinkles_display_none_mobile__onxwju6v NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_label__4z7xt3m  sprinkles_pointerEvents_none__onxwju2u sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_marginBottom_none_mobile__onxwjuv3 sprinkles_marginLeft_none_mobile__onxwjuw7 sprinkles_marginRight_none_mobile__onxwjuxf sprinkles_marginTop_none_mobile__onxwjuyn sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_inline_mobile__onxwju7f NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when active 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_position_relative_mobile__onxwju8v sprinkles_width_full_mobile__onxwjuff NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf sprinkles_position_relative_mobile__onxwju8v"
        >
          <select
            autocomplete="off"
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_select__4z7xt312 reset_trimmedElement__4z7xt30 reset_select__4z7xt39 sprinkles_flexGrow_1_mobile__onxwjun7 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_resetVariants__4z7xt3c reset_resetVariants_as_input__4z7xt313 reset_trimmedElement__4z7xt30 reset_input__4z7xt38 sprinkles_width_full_mobile__onxwjuff sprinkles_position_relative_mobile__onxwju8v sprinkles_display_flex_mobile__onxwju77 sprinkles_borderRadius_md_mobile__onxwjua3 sprinkles_backgroundColor_transparent__onxwju4r withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_height_full_mobile__onxwjudv sprinkles_marginRight_4_mobile__onxwjuwr sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_position_absolute_mobile__onxwju8z SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju77 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv sprinkles_textAlign_left_mobile__onxwju9b NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_activeBorderColour__a2a1mv1"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_activeBorderColour__a2a1mv1"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_2_mobile__onxwjuqv sprinkles_paddingRight_2_mobile__onxwjurz sprinkles_display_block_mobile__onxwju6z NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_label__4z7xt3m  sprinkles_pointerEvents_none__onxwju2u sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_marginBottom_none_mobile__onxwjuv3 sprinkles_marginLeft_none_mobile__onxwjuw7 sprinkles_marginRight_none_mobile__onxwjuxf sprinkles_marginTop_none_mobile__onxwjuyn sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_inline_mobile__onxwju7f NotchedBase_placeholder_default__1ft8sxlz InputState_activeColour__a2a1mv0 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_activeBorderColour__a2a1mv1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when touched 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_position_relative_mobile__onxwju8v sprinkles_width_full_mobile__onxwjuff NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf sprinkles_position_relative_mobile__onxwju8v"
        >
          <select
            autocomplete="off"
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_select__4z7xt312 reset_trimmedElement__4z7xt30 reset_select__4z7xt39 sprinkles_flexGrow_1_mobile__onxwjun7 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_resetVariants__4z7xt3c reset_resetVariants_as_input__4z7xt313 reset_trimmedElement__4z7xt30 reset_input__4z7xt38 sprinkles_width_full_mobile__onxwjuff sprinkles_position_relative_mobile__onxwju8v sprinkles_display_flex_mobile__onxwju77 sprinkles_borderRadius_md_mobile__onxwjua3 sprinkles_backgroundColor_transparent__onxwju4r withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_height_full_mobile__onxwjudv sprinkles_marginRight_4_mobile__onxwjuwr sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_position_absolute_mobile__onxwju8z SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju77 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv sprinkles_textAlign_left_mobile__onxwju9b NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_2_mobile__onxwjuqv sprinkles_paddingRight_2_mobile__onxwjurz sprinkles_display_none_mobile__onxwju6v NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_label__4z7xt3m  sprinkles_pointerEvents_none__onxwju2u sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_marginBottom_none_mobile__onxwjuv3 sprinkles_marginLeft_none_mobile__onxwjuw7 sprinkles_marginRight_none_mobile__onxwjuxf sprinkles_marginTop_none_mobile__onxwjuyn sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_inline_mobile__onxwju7f NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when touched and invalid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_position_relative_mobile__onxwju8v sprinkles_width_full_mobile__onxwjuff NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf sprinkles_position_relative_mobile__onxwju8v"
        >
          <select
            autocomplete="off"
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_select__4z7xt312 reset_trimmedElement__4z7xt30 reset_select__4z7xt39 sprinkles_flexGrow_1_mobile__onxwjun7 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_resetVariants__4z7xt3c reset_resetVariants_as_input__4z7xt313 reset_trimmedElement__4z7xt30 reset_input__4z7xt38 sprinkles_width_full_mobile__onxwjuff sprinkles_position_relative_mobile__onxwju8v sprinkles_display_flex_mobile__onxwju77 sprinkles_borderRadius_md_mobile__onxwjua3 sprinkles_backgroundColor_transparent__onxwju4r withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_height_full_mobile__onxwjudv sprinkles_marginRight_4_mobile__onxwjuwr sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_position_absolute_mobile__onxwju8z SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju77 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv sprinkles_textAlign_left_mobile__onxwju9b NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_2_mobile__onxwjuqv sprinkles_paddingRight_2_mobile__onxwjurz sprinkles_display_none_mobile__onxwju6v NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_label__4z7xt3m  sprinkles_pointerEvents_none__onxwju2u sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_marginBottom_none_mobile__onxwjuv3 sprinkles_marginLeft_none_mobile__onxwjuw7 sprinkles_marginRight_none_mobile__onxwjuxf sprinkles_marginTop_none_mobile__onxwjuyn sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_inline_mobile__onxwju7f NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when touched and valid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_position_relative_mobile__onxwju8v sprinkles_width_full_mobile__onxwjuff NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf sprinkles_position_relative_mobile__onxwju8v"
        >
          <select
            autocomplete="off"
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_select__4z7xt312 reset_trimmedElement__4z7xt30 reset_select__4z7xt39 sprinkles_flexGrow_1_mobile__onxwjun7 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_resetVariants__4z7xt3c reset_resetVariants_as_input__4z7xt313 reset_trimmedElement__4z7xt30 reset_input__4z7xt38 sprinkles_width_full_mobile__onxwjuff sprinkles_position_relative_mobile__onxwju8v sprinkles_display_flex_mobile__onxwju77 sprinkles_borderRadius_md_mobile__onxwjua3 sprinkles_backgroundColor_transparent__onxwju4r withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_height_full_mobile__onxwjudv sprinkles_marginRight_4_mobile__onxwjuwr sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_position_absolute_mobile__onxwju8z SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju77 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv sprinkles_textAlign_left_mobile__onxwju9b NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_success_default_borderColour__a2a1mv7"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_success_default_borderColour__a2a1mv7"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_2_mobile__onxwjuqv sprinkles_paddingRight_2_mobile__onxwjurz sprinkles_display_none_mobile__onxwju6v NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_label__4z7xt3m  sprinkles_pointerEvents_none__onxwju2u sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_marginBottom_none_mobile__onxwjuv3 sprinkles_marginLeft_none_mobile__onxwjuw7 sprinkles_marginRight_none_mobile__onxwjuxf sprinkles_marginTop_none_mobile__onxwjuyn sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_inline_mobile__onxwju7f NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_success_default_borderColour__a2a1mv7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot with custom icon 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff input-class"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_position_relative_mobile__onxwju8v sprinkles_width_full_mobile__onxwjuff NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf sprinkles_position_relative_mobile__onxwju8v"
        >
          <select
            autocomplete="off"
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_select__4z7xt312 reset_trimmedElement__4z7xt30 reset_select__4z7xt39 sprinkles_flexGrow_1_mobile__onxwjun7 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_resetVariants__4z7xt3c reset_resetVariants_as_input__4z7xt313 reset_trimmedElement__4z7xt30 reset_input__4z7xt38 sprinkles_width_full_mobile__onxwjuff sprinkles_position_relative_mobile__onxwju8v sprinkles_display_flex_mobile__onxwju77 sprinkles_borderRadius_md_mobile__onxwjua3 sprinkles_backgroundColor_transparent__onxwju4r withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          />
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_height_full_mobile__onxwjudv sprinkles_marginRight_4_mobile__onxwjuwr sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_position_absolute_mobile__onxwju8z SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju77 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv sprinkles_textAlign_left_mobile__onxwju9b NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_2_mobile__onxwjuqv sprinkles_paddingRight_2_mobile__onxwjurz sprinkles_display_none_mobile__onxwju6v NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_label__4z7xt3m  sprinkles_pointerEvents_none__onxwju2u sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_marginBottom_none_mobile__onxwjuv3 sprinkles_marginLeft_none_mobile__onxwjuw7 sprinkles_marginRight_none_mobile__onxwjuxf sprinkles_marginTop_none_mobile__onxwjuyn sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_inline_mobile__onxwju7f NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot with prefix icon 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff input-class"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_position_relative_mobile__onxwju8v sprinkles_width_full_mobile__onxwjuff NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
      >
        <span
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_position_absolute_mobile__onxwju8z withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_prefixIcon__5jmdy8k withEnhancedInput_iconSize_medium__5jmdy8n InputState_natural_default_colour__a2a1mv4"
        >
          <svg
            aria-hidden="true"
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf sprinkles_position_relative_mobile__onxwju8v"
        >
          <select
            autocomplete="off"
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_select__4z7xt312 reset_trimmedElement__4z7xt30 reset_select__4z7xt39 sprinkles_flexGrow_1_mobile__onxwjun7 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_resetVariants__4z7xt3c reset_resetVariants_as_input__4z7xt313 reset_trimmedElement__4z7xt30 reset_input__4z7xt38 sprinkles_width_full_mobile__onxwjuff sprinkles_position_relative_mobile__onxwju8v sprinkles_display_flex_mobile__onxwju77 sprinkles_borderRadius_md_mobile__onxwjua3 sprinkles_backgroundColor_transparent__onxwju4r withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b withEnhancedInput_inputItselfSize_medium_prefixed_any__5jmdy8d"
          />
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_height_full_mobile__onxwjudv sprinkles_marginRight_4_mobile__onxwjuwr sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_position_absolute_mobile__onxwju8z SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_pointerEvents_none__onxwju2u sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju77 sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv sprinkles_textAlign_left_mobile__onxwju9b NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_2_mobile__onxwjuqv sprinkles_paddingRight_2_mobile__onxwjurz sprinkles_display_none_mobile__onxwju6v NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_label__4z7xt3m  sprinkles_pointerEvents_none__onxwju2u sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_paddingLeft_none_mobile__onxwjurr sprinkles_paddingRight_none_mobile__onxwjusv sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_marginBottom_none_mobile__onxwjuv3 sprinkles_marginLeft_none_mobile__onxwjuw7 sprinkles_marginRight_none_mobile__onxwjuxf sprinkles_marginTop_none_mobile__onxwjuyn sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_inline_mobile__onxwju7f NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_defaultPrefixed__1ft8sxl16"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;
